--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Jira Rapid Board Helper",
   "description": "",
-  "version": "1.3",
+  "version": "1.5",
   "author": "udoless@gmail.com",
   "manifest_version": 3,
   "background": {
@@ -10,6 +10,7 @@
   "permissions": [
     "storage",
     "activeTab",
+    "tabs",
     "scripting"
   ],
   "action": {
@@ -26,5 +27,6 @@
     "32": "icon.png",
     "48": "icon.png",
     "128": "icon.png"
-  }
+  },
+  "options_page": "options.html"
 }
